force-app/main/default/objects/Measurement__c/Measurement__c.object-meta.xml
<CustomObject>
    <label>Measurement</label>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Measurement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>