force-app/main/default/objects/Measurement__c/fields/Balance_Type__c.field-meta.xml
<CustomField>
    <fullName>Balance_Type__c</fullName>
    <label>Balance Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>