force-app/main/default/objects/Measurement__c/fields/Bottom_Sash_D_L_Height__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Sash_D_L_Height__c</fullName>
    <label>Bottom Sash D/L Height (Inches)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sash_D_L</valueSetName>
    </valueSet>
</CustomField>