force-app/main/default/objects/Measurement__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronzed Carmel</fullName>
            </value>
            <value>
                <fullName>Delicate Whilte</fullName>
            </value>
            <value>
                <fullName>Pearl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>