force-app/main/default/objects/Measurement__c/fields/Glass_Type__c.field-meta.xml
<CustomField>
    <fullName>Glass_Type__c</fullName>
    <label>Glass Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Clear</fullName>
                <default>true</default>
                <label>Regular Clear</label>
            </value>
            <value>
                <fullName>Low e-coated</fullName>
            </value>
            <value>
                <fullName>Obscure privacy glass</fullName>
                <isActive>false</isActive>
                <label>Obscure privacy glass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>