force-app/main/default/objects/Measurement__c/fields/Include_Hidden_Balances__c.field-meta.xml
<CustomField>
    <fullName>Include_Hidden_Balances__c</fullName>
    <label>Include Hidden Balances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>