force-app/main/default/objects/Measurement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Measurements</relationshipLabel>
    <relationshipName>Measurements</relationshipName>
    <type>Lookup</type>
</CustomField>