force-app/main/default/objects/Measurement__c/fields/Sash_Operation__c.field-meta.xml
<CustomField>
    <fullName>Sash_Operation__c</fullName>
    <label>Sash Operation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Window_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both Sash Operate</fullName>
            </value>
            <value>
                <fullName>Top/Left Sash</fullName>
            </value>
            <value>
                <fullName>Bottom/Right Sash</fullName>
            </value>
            <value>
                <fullName>Left Sash</fullName>
            </value>
            <value>
                <fullName>Right Sash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>