force-app/main/default/objects/Measurement__c/fields/Window_Type__c.field-meta.xml
<CustomField>
    <fullName>Window_Type__c</fullName>
    <label>Window Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Window_Type</valueSetName>
    </valueSet>
</CustomField>